@@ -6,6 +6,7 @@
 * Fixed running team reports from the CLI while providing the --config arg
 * Added methods for assigning and unassigning project roles
 * Added helpful methods for quickly assigning roles for project managers, asset developers, and express users in a project
+* Added support for setting PYCONS3RT_HOME environment variable to keep the config, logs, etc. in a desired location
 
 0.0.12
 ======
